Copyright update Quality improvements